[Refactor] change find all categories api