@@ -1,7 +1,6 @@
 package io.waterkite94.hd.hotdeal.item.service.admin;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -9,7 +8,7 @@ import org.springframework.transaction.annotation.Transactional;
 import io.waterkite94.hd.hotdeal.item.dao.CategoryMapper;
 import io.waterkite94.hd.hotdeal.item.dao.CategoryRepository;
 import io.waterkite94.hd.hotdeal.item.dao.entity.CategoryEntity;
-import io.waterkite94.hd.hotdeal.item.domain.Category;
+import io.waterkite94.hd.hotdeal.item.domain.dto.FindCategoryDto;
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -20,15 +19,16 @@ public class CategoryService {
 	private final CategoryMapper categoryMapper;
 
 	@Transactional
-	public Long saveCategory(Category category) {
-		CategoryEntity savedCategory = categoryRepository.save(categoryMapper.toEntity(category));
+	public Long saveCategory(FindCategoryDto findCategoryDto) {
+		CategoryEntity savedCategory = categoryRepository.save(categoryMapper.toEntity(findCategoryDto));
 
 		return savedCategory.getId();
 	}
 
-	public List<Category> findAllCategories() {
+	@Transactional
+	public List<FindCategoryDto> findAllCategories() {
 		return categoryRepository.findAll().stream()
 			.map(categoryMapper::toDomain)
-			.collect(Collectors.toList());
+			.toList();
 	}
 }
